<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="1"
              tools:context="ch.heigvd.iict.sym.a3dcompassapp.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_weight="0.14"
        android:paddingTop="30dp"
        android:text="@string/main_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.41"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonNFC"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/launch_NFC" />

        <Button
            android:id="@+id/buttonCodesBarres"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/launch_codesBarres" />

        <Button
            android:id="@+id/buttonBeacon"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/launch_beacon" />

        <Button
            android:id="@+id/buttonCapteurs"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/launch_capteurs" />
    </LinearLayout>

</LinearLayout>
